--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
         integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/toDoList.css" rel="stylesheet">
     <script defer src="javascript/script.js"></script>
 </head>
+
 <body>
-    aaaa
+    <header class="header">
+        <h1>
+            Lista zadań
+        </h1>
+    </header>
+    <section class="section">
+        <h2 class="section__header">
+            Dodaj nowe zadanie
+        </h2>
+        <form class="form">
+            <input type="text" class="form__input" placeholder="Co jest do zrobienia?">
+            <button class="form__button">Dodaj zadanie</button>
+        </form>
+    </section>
+    <section class="section">
+        <div>
+            <h2 class="section__header">Lista zadań</h2>
+        </div>
+        <ul class="taskList">
+            <li>placki</li>
+            <li>ziemniaki</li>
+            <li>koks</li>
+        </ul>
+    </section>
 </body>
+
 </html>
