list look update

--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             <h2 class="section__header">Lista zadań</h2>
         </div>
         <ul class="taskList">
-            <li>placki</li>
-            <li>ziemniaki</li>
-            <li>koks</li>
+            <li class="taskList__tasks">placki</li>
+            <li class="taskList__tasks">ziemniaki</li>
+            <li class="taskList__tasks">koks</li>
+            <li class="taskList__tasks">klapki</li>
         </ul>
     </section>
 </body>
