html and css done!

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <h2 class="section__header">Lista zadań</h2>
         </div>
         <ul class="taskList">
-            <li class="taskList__tasks">placki</li>
-            <li class="taskList__tasks">ziemniaki</li>
-            <li class="taskList__tasks">koks</li>
-            <li class="taskList__tasks">klapki</li>
+            <li class="taskList__marker"><aligen class="taskList__tasks">placki</aligen></li>
+            <li class="taskList__marker"><aligen class="taskList__tasks">ziemniaki</aligen></li>
+            <li class="taskList__marker"><aligen class="taskList__tasks">koks</aligen></li>
+            <li class="taskList__marker"><aligen class="taskList__tasks">klapki</aligen></li>
         </ul>
     </section>
 </body>
