js first commit

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2 class="section__header">
             Dodaj nowe zadanie
         </h2>
-        <form class="form">
-            <input type="text" class="form__input" placeholder="Co jest do zrobienia?">
+        <form class="form js-form">
+            <input type="text" class="form__input js-newTask" placeholder="Co jest do zrobienia?">
             <button class="form__button">Dodaj zadanie</button>
         </form>
     </section>
@@ -35,11 +35,7 @@
         <div>
             <h2 class="section__header">Lista zadań</h2>
         </div>
-        <ul class="taskList">
-            <li class="taskList__marker"><aligen class="taskList__tasks">placki</aligen></li>
-            <li class="taskList__marker"><aligen class="taskList__tasks">ziemniaki</aligen></li>
-            <li class="taskList__marker"><aligen class="taskList__tasks">koks</aligen></li>
-            <li class="taskList__marker"><aligen class="taskList__tasks">klapki</aligen></li>
+        <ul class="taskList js-taskList">
         </ul>
     </section>
 </body>
