--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div>
             <h2 class="section__header">Lista zadań</h2>
         </div>
-        <ul class="taskList js-taskList">
+        <ul class="taskList js-tasks">
         </ul>
     </section>
 </body>
