css files added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
         rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
     <link href="css/toDoList.css" rel="stylesheet">
+    <link href="css/section.css" rel="stylesheet">
+    <link href="css/form.css" rel="stylesheet">
     <script defer src="javascript/script.js"></script>
 </head>
 
