--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,400;0,700;1,400;1,700&display=swap"
         rel="stylesheet">
     <link href="css/global.css" rel="stylesheet">
-    <link href="css/toDoList.css" rel="stylesheet">
+    <link href="css/list.css" rel="stylesheet">
     <link href="css/section.css" rel="stylesheet">
     <link href="css/form.css" rel="stylesheet">
     <script defer src="javascript/script.js"></script>
@@ -29,8 +29,8 @@
             Dodaj nowe zadanie
         </h2>
         <form class="form js-form">
-            <input type="text" class="form__input js-newTask" placeholder="Co jest do zrobienia?">
-            <button class="form__button">Dodaj zadanie</button>
+            <input type="text" class="form__input js-newTask" placeholder="Co jest do zrobienia?" autofocus>
+            <button class="form__button js-formButton">Dodaj zadanie</button>
         </form>
     </section>
     <section class="section">
