--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             Dodaj nowe zadanie
         </h2>
         <form class="form js-form">
-            <input type="text" class="form__input js-newTask" placeholder="Co jest do zrobienia?" autofocus>
-            <button class="form__button js-formButton">Dodaj zadanie</button>
+            <input type="text" class="form__input js-newTask" placeholder="Co jest do zrobienia?">
+            <button class="form__button js-form ">Dodaj zadanie</button>
         </form>
     </section>
     <section class="section">
