js buttons added

--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         </form>
     </section>
     <section class="section">
-        <div>
-            <h2 class="section__header">Lista zadań</h2>
+        <div class="section__buttons">
+            <h2 class="section__header">Lista zadań<span class="js-sectionHeader section__headerButtons"></span>
+            </h2>
         </div>
         <ul class="taskList js-tasks">
         </ul>
