word-brake added

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <main>
     <header class="header">
         <h1>
             Lista zadań
@@ -41,6 +42,7 @@
         <ul class="taskList js-tasks">
         </ul>
     </section>
+</main>
 </body>
 
 </html>
